# src/main/kotlin/routes/bookRoutes/BookRouting.kt
@@ -1,6 +1,6 @@
-package com.example.routes
+package com.example.routes.bookRoutes
 
-import com.example.model.Book
+import com.example.models.Book
 import com.example.db.connectToMongoDB
 import com.example.service.BookService
 import io.ktor.http.*
@@ -15,20 +15,20 @@ fun Application.configureRoutingBooks() {
     val bookService = BookService(mongoDatabase)
     routing {
         // Create book
-        post("/books") {
+        post("/book") {
             val book = call.receive<Book>()
             val id = bookService.create(book)
             call.respond(HttpStatusCode.Created, id)
         }
-        // Read book
-        get("/books/{id}") {
+       // Read book
+        get("/book/{id}") {
             val id = call.parameters["id"] ?: throw IllegalArgumentException("No ID found")
             bookService.read(id)?.let { book ->
                 call.respond(book)
             } ?: call.respond(HttpStatusCode.NotFound)
         }
         // Update book
-        put("/books/{id}") {
+        put("/book/{id}") {
             val id = call.parameters["id"] ?: throw IllegalArgumentException("No ID found")
             val book = call.receive<Book>()
             bookService.update(id, book)?.let {
@@ -36,7 +36,7 @@ fun Application.configureRoutingBooks() {
             } ?: call.respond(HttpStatusCode.NotFound)
         }
         // Delete book
-        delete("/books/{id}") {
+        delete("/book/{id}") {
             val id = call.parameters["id"] ?: throw IllegalArgumentException("No ID found")
             bookService.delete(id)?.let {
                 call.respond(HttpStatusCode.OK)
